[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LTADatamall-py"
version = "0.1.0"
description = "LTA Datamall API Wrapper"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "FishballNoodles", email = "joelkhor.work@gmail.com"}
]
keywords = [
    "lta", "datamall", "bus", "timing", "arrival", "train", 
    "service", "passenger volume", "taxi"
]

dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/TheReaper62/ltadatamall-py"
Bug_Tracker = "https://github.com/TheReaper62/ltadatamall-py/issues"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=ltadatamall --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "core: marks tests as core functionality tests",
    "async: marks tests that test asynchronous functionality",
]

[tool.coverage.run]
source = ["ltadatamall"]
branch = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]
fail_under = 90